--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -942,7 +942,7 @@
 		Simplified_Chinese:"消灭敌方单位后回复[amountHealed]点生命值",
 		Traditional_Chinese:"消滅敵方單位後回復[amountHealed]點生命值",
 		Czech:"Léčí [amountHealed] zranění pokud zabije jednotku"
-		German:"Heilt [amountHealed] Schaden wenn es eine Einheit tötet"
+		German:"Heilt [amountHealed] Schaden beim Töten einer Einheit"
 	}
 
 	"Minuteman":{ // american unique
@@ -966,7 +966,7 @@
 		Traditional_Chinese:"護衛艦",
 		Portuguese:"Fragata"
 		Russian:"Фрегат"
-		German:"Frigatte"
+		German:"Fregatte"
 		Czech:"Fregata"
 	}
 
@@ -991,7 +991,7 @@
 		Simplified_Chinese:"枪骑兵",
 		Traditional_Chinese:"槍騎兵",
 		Portuguese:"Lanceiro montado"
-		German:"Lanzer",
+		German:"LanzerIn",
 		Czech:"Kopiník na koni"
 	}
 
@@ -1011,6 +1011,7 @@
 		Simplified_Chinese:"劫掠不消耗移动力",
 		Traditional_Chinese:"劫掠不消耗移動力",
 		Czech:"Žádná cena pohybu za drancování"
+		German:"Keine Bewegungskosten beim Plündern"
 	}
 
 
@@ -1061,7 +1062,7 @@
 		Simplified_Chinese:"哥萨克骑兵",
 		Traditional_Chinese:"歌薩克騎兵",
 		Russian:"Казаки"
-		German:"Kosak"
+		German:"KosakIn"
 		French:"Cosaque"
 		Czech:"Kozák"
 	}
@@ -1161,6 +1162,7 @@
 		French:"+20% bonus lors de combat hors d'un territoire allié"
 		Russian:"+20 бонус вне дружественной территории"
 		Czech:"+20% bonus mimo přátelské území"
+		German:"+20% Bonus außerhalb befreundeten Gebiets"
 	}
 
 	"Foreign Land":{ // for battle table combat percentage
@@ -1170,6 +1172,7 @@
 		French:"Terre étrangère"
 		Russian:"Чужая земля"
 		Czech:"Cizí země"
+		German:"Fremdes Land"
 	}
 
 	"Destroyer":{
@@ -1191,6 +1194,7 @@
 		French:"Peut attaquer les sous-marins"
 		Russian:"Может атаковать подлодки"
 		Czech:"Může útočit na ponorky"
+		German:"Kann U-Boote angreifen"
 	}
 
 	"Machine Gun":{
@@ -1261,6 +1265,7 @@
 		French:"Bonus en tant qu'attaquant +[amount]%"
 		Russian:"Бонус при атаке +[amount]%",
 		Czech:"Bonus když útočí [amount]%"
+		German:"Bonus für Angriff [amount]%"
 	}
 
 	"Invisible to others":{
@@ -1270,6 +1275,7 @@
 		French:"Invisible aux autres" // (unités)
 		Russian:"Невидим остальным"
 		Czech:"Neviditelná pro ostatní"
+		German:"Unsichtbar für andere"
 	}
 
 	"Can only attack water":{
@@ -1279,6 +1285,7 @@
 		French:"Ne peut attaquer que les unités marines"
 		Russian:"Может атаковать только морские юниты"
 		Czech:"Může útočit pouze ve vodě"
+		German:"Kann nur auf Wasser angreifen"
 	}
 
 	"Carrier":{ // aircrat carrier
@@ -1313,12 +1320,14 @@
 		Simplified_Chinese:"[percent]%几率拦截来袭的敌军飞机",
 		Traditional_Chinese:"[percent]%機率攔截來襲的敵軍飛機",
 		Czech:"[percent]% šance zabránit leteckým útokům"
+		German:"[percent]% Chance, Luftangriffe abzufangen"
 	}
 
-	"Requires Manhattan Project":{
+	"Requires Manhattan Project":{ // really necessary? Seems hardcoded, there is already a translation for "Requires" 
 		Italian:"Richiede Progetto Manhattan"
 		Simplified_Chinese:"需要完成曼哈顿计划"
 		Traditional_Chinese:"需要完成曼哈頓計畫"
+		German:"Benötigt Manhattan Projekt"
 }
 
 	"6 tiles in every direction always visible":{
@@ -1327,6 +1336,7 @@
 		Traditional_Chinese:"全方向6格視野範圍內可見"
 		Russian:"Всегда видимы 6 клеток вокруг"
 		Czech:"6 políček ve všech směrech je vždy viditelných"
+		German:"6 Felder in jede Richtung sichtbar"
 	}
 
 	"Great War Bomber":{
@@ -1387,7 +1397,7 @@
 		Simplified_Chinese:"防空导弹车",
 		Traditional_Chinese:"防空導彈車",
 		Russian:"Мобильный ЗРК"
-		German:"Mobile Flugabwehrrakte"
+		German:"Mobile Flugabwehrrakete"
 		French:"Lance-missiles SAM mobile",
 		Czech:"Mobilní SAM"
 	}
@@ -1437,6 +1447,7 @@
 		Russian:"Тяжелый бомбардировщик"
 		French:"Bombardier"
 		Czech:"Bombardér"
+		German:"Bomber"
 	}
 
 	"Mechanized Infantry":{
@@ -1446,6 +1457,7 @@
 		French:"Infantrie mécanisée"
 		Russian:"Мотопехота"
 		Czech:"Mechanizovaná pěchota"
+		German:"Mechanische Infanterie"
 	}
 
 	"Modern Armor":{
@@ -1455,6 +1467,7 @@
 		French:"Blindé moderne"
 		Russian:"Современный танк"
 		Czech:"Moderní tank"
+		German:"Moderne Panzerung"
 	}
 
 	"B17":{ // american unique
@@ -1466,6 +1479,7 @@
 		French:"B-17"
 		Russian:"B-17"
 		Czech:"B-17"
+		German:"B-17"
 	}
 
 	"Fighter":{
@@ -1474,7 +1488,7 @@
 		Spanish:"Caza"
 		Simplified_Chinese:"战斗机",
 		Traditional_Chinese:"戰鬥機",
-		German:"Jäger"
+		German:"JägerIn"
 		French:"Chasseur"
 		Russian:"Истребитель",
 		Czech:"Stíhač"
@@ -1486,6 +1500,7 @@
 		Traditional_Chinese:"零式戰鬥機",
 		Russian:"Истребитель Зеро"
 		Czech:"Zero"
+		German:"Zero"
 	}
 
 	"Helicopter Gunship":{
@@ -1503,6 +1518,7 @@
 	"Atomic Bomb":{
 		Italian:"Bomba atomica"
 		Czech:"Atomová bomba"
+		German:"Atombombe"
 	}
 
 ////// Information era - not even putting here, too far off
@@ -1536,6 +1552,7 @@
 		Czech:"Jaderná raketa"
 		Simplified_Chinese:"核导弹"
 		Traditional_Chinese:"核導彈"
+		German:"Nuklearrakete"
 	}
 
 ////// Great units
@@ -1549,7 +1566,7 @@
 		Simplified_Chinese:"大艺术家",
 		Traditional_Chinese:"大藝術家",
 		Portuguese:"Grande Artista"
-		German:"Großer Künstler"
+		German:"Große(r) Künstler(in)" //gender sensitive
 		Czech:"Velký Umělec"
 	}
 
@@ -1561,6 +1578,7 @@
 		French:"Ne peut être construit" // or Inconstruisible but not sure that it's correct
 		Russian:"Невозможно построить"
 		Czech:"Nelze vybudovat"
+		German:"nicht baubar"
 	}
 
 	"Can start an 8-turn golden age":{
@@ -1598,7 +1616,7 @@
 		Simplified_Chinese:"大科学家",
 		Traditional_Chinese:"大科學家",
 		Portuguese:"Grande Ciêntista"
-		German:"Großer Wissenschaftler"
+		German:"Große(r) Wissenschaftler(in)" // gender sensitive
 		Czech:"Velký Vědec"
 	}
 
@@ -1637,7 +1655,7 @@
 		Simplified_Chinese:"大商业家",
 		Traditional_Chinese:"大商業家",
 		Portuguese:"Grande Mercador"
-		German:"Großer Händler"
+		German:"Große(r) Händler(in)"
 		Czech:"Velký Obchodník"
 	}
 
@@ -1676,7 +1694,7 @@
 		Simplified_Chinese:"大工程师",
 		Traditional_Chinese:"大工程師",
 		Portuguese:"Grande engenheiro"
-		German:"Großer Ingenieur"
+		German:"Große(r) Ingenieur(in)"
 		Czech:"Velký Inženýr"
 	}
 
@@ -1713,7 +1731,7 @@
 		Simplified_Chinese:"大军事家",
 		Traditional_Chinese:"大軍事家",
 		Russian:"Великий полководец"
-		German:"Großer General"
+		German:"Große(r) General(in)"
 		French:"Général illustre"
 		Czech:"Velký Generál"
 	}
@@ -1725,6 +1743,7 @@
 		Traditional_Chinese:"周圍兩格地塊內的我方所有陸軍單位+15%戰鬥力"
 		Russian:"Бонус к атаке юнитам в радиусе 2-х клеток"
 		Czech:"Bonus pro bojové jednotky v okruhu 2 políček 15%"
+		German:"15% Bonus für Einheiten im Umfeld von 2 Feldern"
 	}
 
 	////// Unit Promotions
@@ -1736,6 +1755,7 @@
 		Traditional_Chinese:"選擇升級項目",
 		Russian:"Повышение"
 		Czech:"Vaberte povýšení"
+		German:"Wähle eine Beförderung"
 	}
 
 	" OR ":{// as in "Requires Accuracy I OR Barrage I
@@ -1756,7 +1776,7 @@
 		Russian:"Бонус против [unitType]"
 		French:"Bonus contre [unitType]"
 		Romanian:"Bonus contra [unitType]"
-		German:"Im Vorteil gegen [unitType]" // Gender sensitive --> not necessary as we talk about "types" not specific units
+		German:"Im Vorteil gegen [unitType]"
 		Dutch:"Voordeel tegen [unitType]"
 		Spanish:"Bonus contra [unitType]"
 		Simplified_Chinese:"对战[unitType]时战斗力+",
@@ -1770,7 +1790,7 @@
 		Russian:"Штраф против [unitType]"
 		French:"Pénalité contre [unitType]"
 		Romanian:"Penalizare contra [unitType]"
-		German:"Im Nachteil gegen [unitType]" // Gender sensitive --> not necessary as we talk about "types" not specific units
+		German:"Im Nachteil gegen [unitType]"
 		Dutch:"Nadeel tegen [unitType]"
 		Spanish:"Penalización contra [unitType]"
 		Simplified_Chinese:"对战[unitType]时战斗力-",
@@ -1816,6 +1836,7 @@
 		French:"Unités en terrain ouvert"
 		Russian:"юниты на открытой местности"
 		Czech:"jednotky v otevřeném terénu"
+		German:"Einheiten im offenen Gelände"
 	}
 
 	"units in rough terrain":{
@@ -1953,7 +1974,7 @@
 
 	"+1 Movement":{
 		Italian:"+1 Movimento"
-		German:"+1 Sichtweite"
+		German:"+1 Bewegung"
 		French:"+1 Mouvement"
 		Russian:"+1 Передвижение"
 		Simplified_Chinese:"+1移动力",
@@ -1983,7 +2004,7 @@
 
 	"+25% Defence against ranged attacks":{
 		Italian:"+25 difesa contro gli attacchi a distanza"
-		German:"+25% Verteidigung gegen alle Fernangriffe"
+		German:"+25% Verteidigung gegen Fernangriffe"
 		French:"+25% défence contre les attaques à distance"
 		Russian:"+25% защиты от дальних атак"
 		Simplified_Chinese:"遭受远程攻击时+25%防御力",
@@ -2018,6 +2039,7 @@
 		Traditional_Chinese:"受傷單位",
 		Russian:"раненые юниты"
 		Czech:"zraněné jednotky"
+		German:"verwundete Einheiten"
 	}
 
 	"Mobility":{
@@ -2088,6 +2110,7 @@
 		Simplified_Chinese:"越过障碍进行远程攻击",
 		Traditional_Chinese:"越過障礙進行遠程攻擊",
 		Czech:"Útoky na dálku lze provádět i přes překážky"
+		German:"Fernangriffe können über Hindernisse erfolgen"
 	}
 
 	"Formation I":{
@@ -2162,7 +2185,7 @@
 
 	"Boarding Party II":{
 		Italian:"Abbordaggio II"
-		German:"Entermannschaft II"
+		German:"Entergruppe II"
 		French:"Embarquement II"
 		Russian:"Абордаж II"
 		Simplified_Chinese:"接舷II级",
@@ -2172,7 +2195,7 @@
 
 	"Boarding Party III":{
 		Italian:"Abbordaggio III"
-		German:"Entermannschaft III"
+		German:"Enterteam III"
 		French:"Embarquement III"
 		Russian:"Абордаж III"
 		Simplified_Chinese:"接舷III级",
@@ -2182,7 +2205,7 @@
 
 	"Coastal Raider I":{
 		Italian:"Incursione costiera I"
-		German:"Küstenräuber I"
+		German:"KüstenräuberIn I"
 		French:"Commando Côtier I" //not very accurate
 		Russian:"Береговой налетчик I"
 		Simplified_Chinese:"海掠I级",
@@ -2193,7 +2216,7 @@
 
 	"Coastal Raider II":{
 		Italian:"Incursione costiera II"
-		German:"Küstenräuber II"
+		German:"KüstenräuberIn II"
 		French:"Commando Côtier II"
 		Russian:"Береговой налетчик II"
 		Simplified_Chinese:"海掠II级",
@@ -2203,7 +2226,7 @@
 
 	"Coastal Raider III":{
 		Italian:"Incursione costiera III"
-		German:"Küstenräuber III"
+		German:"KüstenräuberIn III"
 		French:"Commando Côtier III"
 		Russian:"Береговой налетчик III"
 		Simplified_Chinese:"海掠III级",
@@ -2279,6 +2302,7 @@
 		French:"Bûcheron"
 		Russian:"Передвижение через лес"
 		Czech:"Lesník"
+		German:"Waldarbeitskräfte"
 	}
 
 	"Double movement rate through Forest and Jungle":{
@@ -2288,6 +2312,7 @@
 		French:"Déplacement doublé dans la Forêt et la Jungle"
 		Russian:"Передвижение через Лес и Джунгли тратит вдвое меньше очков действия"
 		Czech:"Dvojnásobná rychlost pohybu v lese a džungli"
+		German:"Doppelte Bewegungsrate durch Wald und Dschungel"
 	}
 
 	"Heal Instantly":{
@@ -2297,6 +2322,7 @@
 		French:"Soin instantané"
 		Russian:"Мгновенное излечение"
 		Czech:"Okamžitě vyléčit"
+		German:"Sofortige Heilung"
 	}
 
 	"Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Promotion":{
@@ -2306,6 +2332,7 @@
 		French:"Soigne cette unité de 50 PV, coûte une promotion"
 		Russian:"Излечить юнит на 50 ОЗ. Данное действие заменяет возможность повышения."
 		Czech:"Léčba této jednotky zvýší zdraví o 50 bodů, ale přijdete tak o možnost povýšení jednotky"
+		German:"Heile diese Einheit um 50 LP; Wenn Sie dies tun, wird diese Gelegenheit genutzt, um eine Promotion zu wählen." // not sure about the 2nd half
 	}
 
 	"Medic":{
@@ -2315,6 +2342,7 @@
 		French:"Médecin"
 		Russian:"Медик"
 		Czech:"Zdravotník I"
+		German:"Rettungskräfte I"
 	}
 
 	"This unit and all others in adjacent tiles heal 5 additional HP per turn":{
@@ -2324,6 +2352,7 @@
 		French:"Cette unité et toutes celles présentes dans les cases adjacentes se soignent de 5 PV supplémentaires par tour"
 		Russian:"Данный юнит и юниты на близлежащих территориях восстанавливают 5 ОЗ за ход"
 		Czech:"Tato jednotka a všechny jednotky na vedlejších políčkách budou léčeny rychlosti 5 bodů zdraví za tah"
+		German:"Diese Einheit und alle anderen in anliegenden Feldern werden zusätzlich 5 LP pro Runde geheilt"
 	}
 
 	"Medic II":{
@@ -2333,6 +2362,7 @@
 		French:"Médecin II"
 		Russian:"Медик II",
 		Czech:"Zdravotník II"
+		German:"Rettungskräfte II"
 	}
 
 	"This unit and all others in adjacent tiles heal 5 additional HP. This unit heals 5 additional HP outside of friendly territory.":{
@@ -2342,6 +2372,7 @@
 		French:"Cette unité et toutes celles présentes dans les cases adjacentes se soignent de 5 PV supplémentaires par tour. Cette unité se soigne de 5 PV supplémentaires par tour en dehors d'un territoire allié"
 		Russian:"Данный юнит и юниты на близлежащих территориях восстанавливают 5 ОЗ за ход. Данный юнит восстанавливает ещё 5 ОЗ вне дружественной территории",
 		Czech:"Tato jednotka a všechny jednotky na vedlejších políčkách budou léčeny rychlosti 5 bodů zdraví za tah. Tato jednotka bude léčena rychlostí 5 bodů zdraví za tah mimo přátelské území."
+		German:"Diese Einheit und alle anderen in anliegenden Feldern werden zusätzlich 5 LP geheilt. Diese Einheit heilt zusätzlich 5 LP außerhalb von befreundeten Gelände."
 	}
 
 	"Targeting I (air)":{//Should be Air Targeting I
@@ -2351,6 +2382,7 @@
 		Simplified_Chinese:"空中定位I级",
 		Traditional_Chinese:"空中定位I級",
 		Czech:"Míření I (vzduch)"
+		German:"Luftzielerfassung I"
 	}
 
 	"Targeting II (air)":{//Should be Air Targeting II
@@ -2360,6 +2392,7 @@
 		Simplified_Chinese:"空中定位II级",
 		Traditional_Chinese:"空中定位II級",
 		Czech:"Míření II (vzduch)"
+		German:"Luftzielerfassung II"
 	}
 
 	"Targeting III (air)":{
@@ -2369,6 +2402,7 @@
 		Simplified_Chinese:"空中定位III级",
 		Traditional_Chinese:"空中定位III級",
 		Czech:"Míření III (vzduch)"
+		German:"Luftzielerfassung III"
 	}
 
 	"Air Repair":{
@@ -2378,6 +2412,7 @@
 		Simplified_Chinese:"空中维修",
 		Traditional_Chinese:"空中維修",
 		Czech:"Oprava ve vzduchu"
+		German:"Reparatur in der Luft"
 	}
 
 	"Unit will heal every turn, even if it performs an action":{
@@ -2387,6 +2422,7 @@
 		Simplified_Chinese:"每回合回复生命值(包括执行指令后)"
 		Traditional_Chinese:"每回合回復生命值(包括執行指令後)"
 		Czech:"Jednotka bude léčená každé kolo, i když provádí nějakou akci"
+		German:"Einheit heilt jede Runde, selbst wenn sie eine Aktion durchführt"
 	}
 
 	"Operational Range":{
@@ -2396,6 +2432,7 @@
 		Simplified_Chinese:"航程拓展",
 		Traditional_Chinese:"航程拓展",
 		Czech:"Operační vzdálenost"
+		German:"Betriebsbereich"
 	}
 
 	"+2 Range":{
@@ -2405,6 +2442,7 @@
 		Simplified_Chinese:"+2航程",
 		Traditional_Chinese:"+2航程",
 		Czech:"+2 vzdálenost"
+		German:"+2 Reichweite"
 	}
 
 	"Sortie":{
@@ -2414,6 +2452,7 @@
 		Traditional_Chinese:"連續出擊",
 		Russian:"Вылазка"
 		Czech:"Bojový let"
+		German:"Sortie" // not sure what this is?
 	}
 
 	"1 extra Interception may be made per turn":{
@@ -2423,6 +2462,7 @@
 		Simplified_Chinese:"+1额外拦截次数/回合"
 		Traditional_Chinese:"1額外攔截次數/回合"
 		Czech:"1 extra zabránění útoku za tah navíc"
+		German:"1 mal extra Abfangen pro Runde möglich"
 	}
 
 	"Dogfighting I":{
@@ -2432,6 +2472,7 @@
 		Simplified_Chinese:"缠斗I级",
 		Traditional_Chinese:"纏鬥I級",
 		Czech:"Letecký souboj I"
+		German:"Luftkampf I"
 	}
 
 	"Bonus when performing air sweep [bonusAmount]%":{
@@ -2441,6 +2482,7 @@
 		Simplified_Chinese:"空中游猎时+[bonusAmount]%战斗力",
 		Traditional_Chinese:"空中遊獵時+[bonusAmount]%戰鬥力",
 		Czech:"Bonus při provádění leteckého čištění [bonusAmount]%"
+		German:"[bonusAmount]% Bonus bei Bewegung in der Luft" // not sure about the correct transl. for "air sweep"
 	}
 
 	"Dogfighting II":{
@@ -2450,6 +2492,7 @@
 		Simplified_Chinese:"缠斗II级",
 		Traditional_Chinese:"纏鬥II級",
 		Czech:"Letecký souboj II"
+		German:"Luftkampf II"
 	}
 
 	"Dogfighting III":{
@@ -2459,6 +2502,7 @@
 		Simplified_Chinese:"缠斗III级",
 		Traditional_Chinese:"纏鬥III級",
 		Czech:"Letecký souboj III"
+		German:"Luftkampf III"
 	}
 
 	"Interception I":{
@@ -2468,6 +2512,7 @@
 		Simplified_Chinese:"拦截I级",
 		Traditional_Chinese:"攔截I級",
 		Czech:"Interceptor I"
+		German:"Abfangen I"
 	}
 
 	"Bonus when intercepting [bonusAmount]%":{
@@ -2477,6 +2522,7 @@
 		Simplified_Chinese:"拦截敌方飞机时+[bonusAmount]%战斗力",
 		Traditional_Chinese:"攔截敵方飛機時+[bonusAmount]%戰鬥力",
 		Czech:"Bonus při zachycení útoku [bonusAmount]%"
+		German:"[bonusAmount]% Bonus beim Abfangen" 
 	}
 
 	"Interception II":{
@@ -2486,6 +2532,7 @@
 		Simplified_Chinese:"拦截II级",
 		Traditional_Chinese:"攔截II級",
 		Czech:"Interceptor II"
+		German:"Abfangen II"
 	}
 
 	"Interception III":{
@@ -2495,6 +2542,7 @@
 		Simplified_Chinese:"拦截III级",
 		Traditional_Chinese:"攔截III級",
 		Czech:"Interceptor III"
+		German:"Abfangen III"
 	}
 
 	"Siege I":{//Air
@@ -2504,6 +2552,7 @@
 		Simplified_Chinese:"攻坚I级",
 		Traditional_Chinese:"攻堅I級",
 		Czech:"Nálet I"
+		German:"Belagerung I"
 	}
 
 	"Siege II":{
@@ -2513,6 +2562,7 @@
 		Simplified_Chinese:"攻坚II级",
 		Traditional_Chinese:"攻堅II級",
 		Czech:"Nálet II"
+		German:"Belagerung II"
 	}
 
 	"Siege III":{
@@ -2522,6 +2572,7 @@
 		Simplified_Chinese:"攻坚III级",
 		Traditional_Chinese:"攻堅III級",
 		Czech:"Nálet III"
+		German:"Belagerung III"
 	}
 
 	"Evasion":{
@@ -2531,6 +2582,7 @@
 		Simplified_Chinese:"规避能力",
 		Traditional_Chinese:"規避能力",
 		Czech:"Průnik"
+		German:"Ausweichen"
 	}
 
 	"Reduces damage taken from interception by 50%":{
@@ -2540,6 +2592,7 @@
 		Simplified_Chinese:"遭受拦截时的损伤-50%",
 		Traditional_Chinese:"遭受攔截時的損傷-50%",
 		Czech:"Redukuje škody způsobené interceptory o 50%"
+		German:"Reduziert den empfangenden Schaden durch Abfangen um 50%"
 	}
 
 	"Bonus when intercepting [amount]%":{
@@ -2548,6 +2601,7 @@
 		Traditional_Chinese:"執行攔截任務時+[amount]%戰鬥力",
 		Russian:"Бонус при перехвате [amount]%",
 		Czech:"Bonus při zachytávání útoků [amount]%"
+		German:"[amount]% Bonus beim Abfangen"
 	}
 
 	"Ambush I":{//Should be Air Ambush I
@@ -2556,6 +2610,7 @@
 		Traditional_Chinese:"伏擊I級",
 		Russian:"Засада I"
 		Czech:"Přepadení I"
+		German:"Lufthinterhalt I"
 	}
 
 	"Ambush II":{//Should be Air Ambush II
@@ -2564,6 +2619,7 @@
 		Traditional_Chinese:"伏擊II級",
 		Russian:"Засада II",
 		Czech:"Přepadení II"
+		German:"Lufthinterhalt II"
 	}
 
 	"Haka War Dance":{
@@ -2571,6 +2627,7 @@
 		Czech:"Haka - valečný tanec"
 		Simplified_Chinese:"哈卡战舞",
 		Traditional_Chinese:"哈卡戰舞"
+		German:"Haka Kriegstanz"
 	}
 
 	"-10% combat strength for adjacent enemy units":{
@@ -2578,6 +2635,7 @@
 		Czech:"-10% bojové síly pro nepřátelské jednotky na sousedních políčkách"
 		Simplified_Chinese:"相邻的敌方单位-10%战斗力"
 		Traditional_Chinese:"相鄰的敵方單位-10%戰鬥力"
+		German:"-10% Kampfstärke für angrenzende feindliche Einheiten"
 	}
 
 }
