--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -65,7 +65,7 @@
 		Simplified_Chinese:"石工坊"
 		Traditional_Chinese:"石工坊"
 		Portuguese:"Obras de pedras"
-		German:"Mauerwerk"
+		German:"Steinmetz"
 		Polish:"Kamieniarz"
 		Czech:"Kamenictví"
 }
