--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1964,7 +1964,7 @@
 		Portuguese:"25% da comida é mantida depois de um novo cidadão nascer"
 		Polish:"25% więcej żywności po pojawieniu się nowego obywatela"
 		Czech:"25% Jídla je zachováno poté, co se město rozroste o nového obyvatele"
-		Ukrainian::"Після народження нового жителя додається 25% їжі"
+		Ukrainian:"Після народження нового жителя додається 25% їжі"
 }
 
 	"Factory":{
@@ -2259,7 +2259,7 @@
 		Traditional_Chinese:"“給我你們的貧乏，你們的貧困，擁擠在旅途渴望自由呼吸的人們，被彼岸無情拋棄顛沛流離的驚魂。把這些無家可歸，飽嚐風雨的苦難者全部給我，我佇立在金色的大門旁高舉起燈火！”——艾瑪·拉扎路斯（美國詩人）"
 		Czech:"'Dej mi své unavené, své ubohé, tvé schoulené masy toužící po svobodném nadechnutí, uboze odmítnuté tvým oplývajícím břehem. Pošli mi ty, bez domova, zmítané bouří. Pozvednu svou lampu u zlatých dveří!' - Emma Lazarus"
 		Russian:"'А мне отдайте ваших усталых, ваших бедных... А мне отдайте из глубин бездонных, Своих изгоев, люд забитый свой, Пошлите мне отверженных, бездомных,Я им свечу у двери золотой...' - Эмма Лазарус"
-		Ukrainian:"'До мене ідіть... Хто в лахмітті, хто хворий, голодний, бездомний, Кого викинув світ у сваволі крутій, - Нехай прийдуть до мене холодні та змучені штормом, Підіймаю цей факел для них біля входу у рай золотий!"' - Емма Лазарус"
+		Ukrainian:"'До мене ідіть... Хто в лахмітті, хто хворий, голодний, бездомний, Кого викинув світ у сваволі крутій, - Нехай прийдуть до мене холодні та змучені штормом, Підіймаю цей факел для них біля входу у рай золотий!' - Емма Лазарус"
 }
 
 	"+1 Production from specialists":{
