--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1848,8 +1848,8 @@
 		Italian:"Conduci missione commerciale"
 		Romanian:"Dirijează misiunea comercială"
 		Spanish:"Tomar mision De Comercio"
-		Simplified_Chinese:"开展贸易"
-		Traditional_Chinese:"發展貿易"
+		Simplified_Chinese:"拓展贸易"
+		Traditional_Chinese:"拓展貿易"
 		German:"Handelsmission durchführen"
 		French:"Faire une mission commerciale"
 		Portuguese:"Realizar uma missão comercial"
@@ -1859,18 +1859,9 @@
 }
 
 	// for unit action button
-	"Your trade mission has earned you [goldGained] gold!":{
-		Italian:"La tua missione commerciale ti ha fruttato [goldGained] Oro!"
-		Romanian:"Misuiunea comercială ți-a adus [goldGained] aur!"
-		Spanish:"¡La mision de comercio ha generado [goldGained] de oro!"
-		Simplified_Chinese:"您开展贸易赚了[goldGained]金钱"
-		Traditional_Chinese:"您發展貿易賺了[goldGained]金錢"
-		Portuguese:"Sua missão comercial deu-lhe [goldGained] ouro!"
-		German:"Die Handelsmission hat [goldGained] Gold eingebracht!"
-		French:"Votre mission commerciale vous a rapporté [goldGained] ors"
-		Russian:"Ваша торговая сделка принесла вам [goldGained] золота!",
-		Czech:"Obchodní mise vynesla [goldGained] zlata!"
-		Ukrainian:"Ваша угода принесла вам [goldGained] золота"
+	"Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence!":{
+		Simplified_Chinese:"您与[civName]拓展贸易获得[goldAmount]金钱和[influenceAmount]影响力！"
+		Traditional_Chinese:"您與[civName]拓展貿易獲得[goldAmount]金錢和[influenceAmount]影響力！"
 }
 
 	"Hurry Wonder":{
